--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device__width, initial__scale=1.0">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="author" content="asv-spb">
-    <meta name="copyright" lang="ru" content="asv-spb">
+    <meta name="author" content="asv__spb">
+    <meta name="copyright" lang="ru" content="asv__spb">
     <meta name="robots" content="index, nofollow">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Uberlanding</title>
 </head>
@@ -20,18 +18,52 @@
 <body>
 
     <header>
+        <div class="container">
+            <nav class="navigation">
+                <ul class="nav-menu d-flex justify-content-center align-items-center">
+                  <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+                  <li class="menu__item"><a href="#" class="menu__link">Со своим автомобилем</a></li>
+                  <li class="menu__item"><a href="#" class="menu__link">На автомобиле компании</a></li>
+                  <li class="menu__item"><a href="#" class="menu__link">Требования</a></li>
+                  <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                  <li class="menu__item"><a href="#" class="menu__link">Оставить заявку</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
+      <section class="main-info">
+        <div class="container">
+          <div class="logo d-flex justify-content-between">
+            <div class="logo__img">
+              <img src="./img/svg/Uber.svg" alt="logo-image">
+              <p class="logo__txt">Официальный партнер Uber в Москве</p>
+            </div>
+            <div class="logo__tel">
+              <div class="logo__wrapper">
+                <span>Звоните нам ежедневно</span>
+                <a class="logo__phone" href="tel:+74957970988">8 495 797 09 88</a>
+              </div>
+              <button class="logo__button" type="button">заказать звонок</button>
+            </div>
+          </div>
+          <div class="heading d-flex justify-content-center align-items-center">
+            <h1 class="heading__h1">КОМПАНИЯ UBER PARTNERS!</h1>
+            <span class="h1--small">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</span>
+            <h2 class="heading__h2">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. По-мимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</h2>
+            <button class="heading__button" type="button">ОТПРАВИТЬ ЗАЯВКУ!</button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" crossorigin="anonymous">
     </script>
 
 </body>
