--- a/src/index.html
+++ b/src/index.html
@@ -34,27 +34,29 @@
 
     <main>
       <section class="main-info">
-        <div class="container">
-          <div class="logo d-flex justify-content-between">
-            <div class="logo__img">
-              <img src="./img/svg/Uber.svg" alt="logo-image">
-              <p class="logo__txt">Официальный партнер Uber в Москве</p>
-            </div>
-            <div class="logo__tel">
-              <div class="logo__wrapper">
-                <span>Звоните нам ежедневно</span>
-                <a class="logo__phone" href="tel:+74957970988">8 495 797 09 88</a>
+        <div class="blackout">
+          <div class="container">
+            <div class="logo d-flex justify-content-between">
+              <div class="logo__img">
+                <img src="./img/svg/Uber.svg" alt="logo-image">
+                <p class="logo__txt">Официальный партнер Uber в Москве</p>
               </div>
-              <button class="logo__button" type="button">заказать звонок</button>
+              <div class="logo__tel">
+                <div class="logo__wrapper">
+                  <span>Звоните нам ежедневно</span>
+                  <a class="logo__phone" href="tel:+74957970988">8 495 797 09 88</a>
+                </div>
+                <button class="logo__button" type="button">заказать звонок</button>
+              </div>
             </div>
           </div>
+        </div>
           <div class="heading d-flex justify-content-center align-items-center">
             <h1 class="heading__h1">КОМПАНИЯ UBER PARTNERS!</h1>
             <span class="h1--small">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</span>
             <h2 class="heading__h2">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. По-мимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</h2>
             <button class="heading__button" type="button">ОТПРАВИТЬ ЗАЯВКУ!</button>
           </div>
-        </div>
       </section>
     </main>
 
