reasons structure and imgs

--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,27 @@
           <div class="container">
             <div class="heading d-flex justify-content-center align-items-center">
               <h1 class="heading__h1">КОМПАНИЯ UBER PARTNERS!</h1>
-              <span class="h1--small">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</span>
-              <h2 class="heading__h2">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. По-мимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</h2>
+              <h2 class="heading__h2">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+              <span class="heading__txt">Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний. Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система. По-мимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.<br><br> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.</span>
               <button class="heading__button" type="button">ОТПРАВИТЬ ЗАЯВКУ!</button>
             </div>
           </div>
+      </section>
+
+      <section class="reasons">
+        <div class="container">
+          <p class="label--white">преимущества</p>
+          <h2 class="heading__h2--black">8 причин начать работать с нами</h2>
+          <div class="wrapper">
+            <div class="reasons-item">
+              <div class="reasons-item__circle">
+                <img class="reasons-item__img" src="" alt="">
+              </div>
+              <p class="reasons-item__txt-heading"></p>
+              <p class="reasons-item__txt"></p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
