--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,64 @@
           </div>
         </div>
       </section>
+
+      <section class="mobile-app">
+        <div class="container">
+          <p class="label--black">Возможности</p>
+          <h2 class="heading__h2--black">мобильное приложение убер</h2>
+          <p class="heading__txt-add">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</p>
+          <div class="row">
+            <div class="mobile-app__item--1 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">оформление заказа одним касанием</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+            <div class="mobile-app__item--2 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">надежная подача</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+            <div class="mobile-app__item--3 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">прозрачные цены</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+            <div class="mobile-app__item--4 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">безналичная оплата</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+            <div class="mobile-app__item--5 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">обратная связь</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+            <div class="mobile-app__item--6 col-4 d-flex flex-column  justify-content-between">
+              <p class="mobile-app__item-txt">разделить стоимость поездки</p>
+              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
