--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,18 @@
           </div>
         </div>
       </section>
+
+      <section class="choice">
+        <div class="choice__bg-black"></div>
+        <div class="choice__bg-img"></div>
+        <div class="choice__auto position-absolute top-0 start-50 translate-middle-x">
+          <p class="label--white">Возможности</p>
+          <h2 class="heading__h2--white">Выбор - отличная штука!</h2>
+          <p class="heading__txt-add--white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
+          <img class="choice__img" src="./img/car.png" alt="auto-image">
+          <p class="choice__txt">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
+        </div>
+      </section>
     </main>
 
     <footer>
