--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,16 @@
 <body>
 
     <header>
-        <div class="container">
-            <nav class="navigation">
-                <ul class="nav-menu d-flex justify-content-center align-items-center">
-                  <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
-                  <li class="menu__item"><a href="#" class="menu__link">Со своим автомобилем</a></li>
-                  <li class="menu__item"><a href="#" class="menu__link">На автомобиле компании</a></li>
-                  <li class="menu__item"><a href="#" class="menu__link">Требования</a></li>
-                  <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
-                  <li class="menu__item"><a href="#" class="menu__link">Оставить заявку</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navigation">
+            <ul class="nav-menu d-flex justify-content-center align-items-center">
+              <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Со своим автомобилем</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">На автомобиле компании</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Требования</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Оставить заявку</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -225,6 +223,48 @@
           <p class="heading__txt-add--white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
           <img class="choice__img" src="./img/car.png" alt="auto-image">
           <p class="choice__txt">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</p>
+        </div>
+      </section>
+
+      <section class="requirements">
+        <div class="container">
+          <div class="row">
+            <p class="label--black">Возможности</p>
+            <h2 class="heading__h2--black">условия и требования</h2>
+            <div class="requirements__item col-6">
+              <p class="requirements__text">УСЛОВИЯ: со своим авто:</p>
+              <p class="requirements__list-txt">Подключаем к системе UBER  под 10%.</p>
+              <p class="requirements__list-txt">Ни каких взносов  0%!</p>
+              <p class="requirements__list-txt">Можем подключать удаленно без приезда в офис</p>
+              <p class="requirements__list-txt">ИП не требуется</p>
+              <p class="requirements__list-txt">Заказы распределяются без учета рейтинга ближайшим водителям</p>
+              <p class="requirements__list-txt">Работа только по безналичному расчету</p>
+              <p class="requirements__list-txt">Деньги перечисляем на карту водителю или наличными в офисе</p>
+              <p class="requirements__text-add">В день заработок составляет 7000-12000р + бонус 3000т рублей</p>
+            </div>
+            <div class="requirements__item col-6">
+              <p class="requirements__text">УСЛОВИЯ: на авто компании:</p>
+              <p class="requirements__list-txt">Предоставляем авто без залога</p>
+              <p class="requirements__list-txt">Без ежедневных выплат по аренде</p>
+              <p class="requirements__list-txt">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</p>
+            </div>
+            <div class="requirements__item col-6">
+              <p class="requirements__text--red">УСЛОВИЯ: со своим авто:</p>
+              <p class="requirements__list-txt--red">Наличие автомобиля без рекламы</p>
+              <p class="requirements__list-txt--red">Автомобиль не должен быть желтый и не с желтыми номерами</p>
+              <p class="requirements__list-txt--red">Машина не старше 3 лет</p>
+              <p class="requirements__list-txt--red">Стаж вождения не менее 3 лет</p>
+              <p class="requirements__list-txt--red">Девайс на системе андроид 4.0 и выше</p>
+            </div>
+            <div class="requirements__item col-6">
+              <p class="requirements__text--red">ДОКУМЕНТЫ:</p>
+              <p class="requirements__list-txt--red">Права 2 стороны</p>
+              <p class="requirements__list-txt--red">СТС</p>
+              <p class="requirements__list-txt--red">Лицензия (если есть)</p>
+              <p class="requirements__list-txt--red">Номер телефона</p>
+              <p class="requirements__list-txt--red">Номер карты для перечисления денег(указать в письме)!</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
