--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Uberlanding</title>
+    <title>Uber-landing</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
           <h2 class="heading__h2--black">8 причин начать работать с нами</h2>
           <div class="row">
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/c-card.svg" alt="card image" width="80" height="66">
                 </div>
@@ -76,7 +76,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/part.svg" alt="part image" width="64" height="69">
                 </div>
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/money.svg" alt="money image" width="83" height="53">
                 </div>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/calendar.svg" alt="calendar image" width="79" height="73">
                 </div>
@@ -109,7 +109,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/key.svg" alt="key image" width="54" height="78">
                 </div>
@@ -120,7 +120,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/map.svg" alt="map image" width="63" height="67">
                 </div>
@@ -131,7 +131,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/call.svg" alt="call image" width="85" height="66">
                 </div>
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="reasons-item col-6">
-              <div class="cirle-wrapper">
+              <div class="circle-wrapper">
                 <div class="reasons-item__circle">
                   <img class="reasons-item__img" src="./img/svg/auto.svg" alt="auto image" width="73" height="68">
                 </div>
@@ -164,49 +164,49 @@
           <div class="row">
             <div class="mobile-app__item--1 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">оформление заказа одним касанием</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
             <div class="mobile-app__item--2 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">надежная подача</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
             <div class="mobile-app__item--3 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">прозрачные цены</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
             <div class="mobile-app__item--4 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">безналичная оплата</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
             <div class="mobile-app__item--5 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">обратная связь</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
             <div class="mobile-app__item--6 col-4 d-flex flex-column  justify-content-between">
               <p class="mobile-app__item-txt">разделить стоимость поездки</p>
-              <div class="mobile-app__cirle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__cirle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__cirle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
                 </div>
               </div>
             </div>
@@ -278,25 +278,46 @@
               <p class="heading__txt-add--white">Закажите автомобиль, который подходит вам по стилю и бюджету</p>
             </div>
             <div class="world__item">
-              <p class="world__txt">посмотреть все города</p>
+              <p class="world__txt"><a href="#">посмотреть все города</a></p>
             </div>
           </div>
       </section>
-
-<div class="div-container">
-  <div class="div-a"></div>
-  <div class="div-b"></div>
-</div>
-
     </main>
 
-    <footer>
+    <footer class="footer">
+      <div class="footer__icons">
+        <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+        <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+      </div>
+      <div class="footer__nav position-absolute top-50 start-50 translate-middle">
+        <div class="nav-strip"></div>
+        <div class="nav-row">
+          <p>на главную</p>
+          <p>города</p>
+          <p>для водителей</p>
+        </div>
+        <div class="nav-row--small">
+          <p>центр поддержки</p>
+          <p>вакансии</p>
+          <p>разработчики</p>
+          <p>блог</p>
+          <p>о нас</p>
+        </div>
+        <p class="nav-row--rus">русский</p>
+      </div>
+      <div class="footer__app">
+        <img src="./img/svg/app.svg" alt="">
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" crossorigin="anonymous">
     </script>
+
+    <script src="https://kit.fontawesome.com/c0eb6ba25e.js" crossorigin="anonymous"></script>
 
 </body>
 
