--- a/src/index.html
+++ b/src/index.html
@@ -166,58 +166,60 @@
 
       <section class="mobile-app">
         <div class="container">
-          <p class="label--black">Возможности</p>
-          <h2 class="heading__h2--black">мобильное приложение убер</h2>
-          <p class="heading__txt-add">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</p>
           <div class="row">
-            <div class="mobile-app__item--1 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">оформление заказа одним касанием</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+            <p class="label--black">Возможности</p>
+            <h2 class="heading__h2--black">мобильное приложение убер</h2>
+            <p class="heading__txt-add">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</p>
+              <div class="mobile-app-grid">
+                <div class="mobile-app__item--1 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">оформление заказа одним касанием</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
+                </div>
+                <div class="mobile-app__item--2 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">надежная подача</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
+                </div>
+                <div class="mobile-app__item--3 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">прозрачные цены</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
+                </div>
+                <div class="mobile-app__item--4 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">безналичная оплата</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
+                </div>
+                <div class="mobile-app__item--5 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">обратная связь</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
+                </div>
+                <div class="mobile-app__item--6 d-flex flex-column  justify-content-between">
+                  <p class="mobile-app__item-txt">разделить стоимость поездки</p>
+                  <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
+                    <div class="mobile-app__circle d-flex align-items-center justify-content-center">
+                      <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="mobile-app__item--2 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">надежная подача</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
-                </div>
-              </div>
-            </div>
-            <div class="mobile-app__item--3 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">прозрачные цены</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
-                </div>
-              </div>
-            </div>
-            <div class="mobile-app__item--4 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">безналичная оплата</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
-                </div>
-              </div>
-            </div>
-            <div class="mobile-app__item--5 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">обратная связь</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
-                </div>
-              </div>
-            </div>
-            <div class="mobile-app__item--6 col-4 d-flex flex-column  justify-content-between">
-              <p class="mobile-app__item-txt">разделить стоимость поездки</p>
-              <div class="mobile-app__circle-wrapper d-flex align-items-center justify-content-center">
-                <div class="mobile-app__circle d-flex align-items-center justify-content-center">
-                  <img class="mobile-app__circle-plus" src="./img/svg/plus.svg" alt="plus-image" width="14" height="14">
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </section>
@@ -241,39 +243,49 @@
           <div class="row">
             <p class="label--black">Возможности</p>
             <h2 class="heading__h2--black">условия и требования</h2>
-            <div class="requirements__item col-6">
-              <p class="requirements__text">УСЛОВИЯ: со своим авто:</p>
-              <p class="requirements__list-txt">Подключаем к системе UBER  под 10%.</p>
-              <p class="requirements__list-txt">Ни каких взносов  0%!</p>
-              <p class="requirements__list-txt">Можем подключать удаленно без приезда в офис</p>
-              <p class="requirements__list-txt">ИП не требуется</p>
-              <p class="requirements__list-txt">Заказы распределяются без учета рейтинга ближайшим водителям</p>
-              <p class="requirements__list-txt">Работа только по безналичному расчету</p>
-              <p class="requirements__list-txt">Деньги перечисляем на карту водителю или наличными в офисе</p>
-              <p class="requirements__text-add">В день заработок составляет 7000-12000р + бонус 3000т рублей</p>
-            </div>
-            <div class="requirements__item col-6">
-              <p class="requirements__text">УСЛОВИЯ: на авто компании:</p>
-              <p class="requirements__list-txt">Предоставляем авто без залога</p>
-              <p class="requirements__list-txt">Без ежедневных выплат по аренде</p>
-              <p class="requirements__list-txt">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</p>
-            </div>
-            <div class="requirements__item col-6">
-              <p class="requirements__text--red">УСЛОВИЯ: со своим авто:</p>
-              <p class="requirements__list-txt--red">Наличие автомобиля без рекламы</p>
-              <p class="requirements__list-txt--red">Автомобиль не должен быть желтый и не с желтыми номерами</p>
-              <p class="requirements__list-txt--red">Машина не старше 3 лет</p>
-              <p class="requirements__list-txt--red">Стаж вождения не менее 3 лет</p>
-              <p class="requirements__list-txt--red">Девайс на системе андроид 4.0 и выше</p>
-            </div>
-            <div class="requirements__item col-6">
-              <p class="requirements__text--red">ДОКУМЕНТЫ:</p>
-              <p class="requirements__list-txt--red">Права 2 стороны</p>
-              <p class="requirements__list-txt--red">СТС</p>
-              <p class="requirements__list-txt--red">Лицензия (если есть)</p>
-              <p class="requirements__list-txt--red">Номер телефона</p>
-              <p class="requirements__list-txt--red">Номер карты для перечисления денег(указать в письме)!</p>
-            </div>
+              <div class="requirments-grid">
+                <div class="req-wrapper">
+                  <div class="requirements__item">
+                    <p class="requirements__text">УСЛОВИЯ: со своим авто:</p>
+                    <p class="requirements__list-txt">Подключаем к системе UBER  под 10%.</p>
+                    <p class="requirements__list-txt">Ни каких взносов  0%!</p>
+                    <p class="requirements__list-txt">Можем подключать удаленно без приезда в офис</p>
+                    <p class="requirements__list-txt">ИП не требуется</p>
+                    <p class="requirements__list-txt">Заказы распределяются без учета рейтинга ближайшим водителям</p>
+                    <p class="requirements__list-txt">Работа только по безналичному расчету</p>
+                    <p class="requirements__list-txt">Деньги перечисляем на карту водителю или наличными в офисе</p>
+                    <p class="requirements__text-add">В день заработок составляет 7000-12000р + бонус 3000т рублей</p>
+                  </div>
+                </div>
+                <div class="req-wrapper">
+                  <div class="requirements__item">
+                    <p class="requirements__text">УСЛОВИЯ: на авто компании:</p>
+                    <p class="requirements__list-txt">Предоставляем авто без залога</p>
+                    <p class="requirements__list-txt">Без ежедневных выплат по аренде</p>
+                    <p class="requirements__list-txt">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</p>
+                  </div>
+                </div>
+                <div class="req-wrapper">
+                  <div class="requirements__item">
+                    <p class="requirements__text--red">УСЛОВИЯ: со своим авто:</p>
+                    <p class="requirements__list-txt--red">Наличие автомобиля без рекламы</p>
+                    <p class="requirements__list-txt--red">Автомобиль не должен быть желтый и не с желтыми номерами</p>
+                    <p class="requirements__list-txt--red">Машина не старше 3 лет</p>
+                    <p class="requirements__list-txt--red">Стаж вождения не менее 3 лет</p>
+                    <p class="requirements__list-txt--red">Девайс на системе андроид 4.0 и выше</p>
+                  </div>
+                </div>
+                <div class="req-wrapper">
+                  <div class="requirements__item">
+                    <p class="requirements__text--red">ДОКУМЕНТЫ:</p>
+                    <p class="requirements__list-txt--red">Права 2 стороны</p>
+                    <p class="requirements__list-txt--red">СТС</p>
+                    <p class="requirements__list-txt--red">Лицензия (если есть)</p>
+                    <p class="requirements__list-txt--red">Номер телефона</p>
+                    <p class="requirements__list-txt--red">Номер карты для перечисления денег(указать в письме)!</p>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
       </section>
